벡터 검색 엔티티매니저에서 네이티브쿼리로 변경